--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "css-loader": "^5.1.0",
+    "webpack": "^2.2.1",
+    "webpack-cli": "^4.4.0"
   },
   "dependencies": {
     "angular": "^1.6.3",
